# utag

./: .gitignore  .goreleaser.yaml  AGENTS.md  CHANGELOG.md  DESIGN.md  PROMPT.md  README.md  autoresearch.sh  design.yaml  full.txt  generate_banner.py  install.sh  pyproject.toml  pytest_output.txt  sources.lock.toml  test_spec.json
.Jules/: palette.md
Progress/: v2.14.0-next-phase.md  v2.15.0.md  v2.16.0-factory.md
Specs/: v2.14.0-next-phase.md  v2.15.0.md  v2.16.0-factory.md
TODO/: v2.14.0-next-phase.md
control-plane/: go.mod  go.sum  main.go
deploy/: Dockerfile.control-plane  Dockerfile.worker
docs/: USER_GUIDE.md  taxonomy_template_v2.md
evals/: openapi-generation.yaml
fixtures/: openapi_tools.json
policies/: ai-providers.yaml  ai-router.yaml  autoscaling.yaml
schemas/: accessibility-contract.schema.json  adapter-manifest.schema.json  ai-provider-manifest.schema.json  artifact-manifest.schema.json  artifact-provenance.schema.json  automation-manifest.schema.json  autoresearch-decision.schema.json  autoresearch-evidence.schema.json  autoresearch-metric.schema.json  autoresearch-plan.schema.json  autoresearch-result.schema.json  autoresearch-step.schema.json  autoresearch-task.schema.json  autoscaling-profile.schema.json  capability-manifest.schema.json  component-spec.schema.json  cost-metric.schema.json  css-variable-manifest.schema.json  data-binding-spec.schema.json  dead-letter-entry.schema.json  design-token-document.schema.json  design-yaml.schema.json  eval-case.schema.json  eval-result.schema.json  factory-job.schema.json  generator-manifest.schema.json  importer-manifest.schema.json  interaction-spec.schema.json  layout-spec.schema.json  log-record.schema.json  mcp-gateway-policy.schema.json  mcp-prompt-contract.schema.json  mcp-resource-contract.schema.json  mcp-side-effect-classification.schema.json  mcp-tool-contract.schema.json  mcp-tool-quality-report.schema.json  metric-point.schema.json  model-call-trace.schema.json  model-capability.schema.json  model-router-policy.schema.json  (+22 more)
scripts/: autoresearch_receipt.py  autoresearch_score.py  autoresearch_task.py  check_accessibility_contracts.py  check_entrypoints.py  (+14 more)
(+327 files in other folders)
