[project]
name = "utag"
version = "2.11.0"
description = "Universal Typed Artifact Generator — provider-agnostic agent harness"
requires-python = ">=3.12"
dependencies = ["utag-core", "utag-generators", "utag-cli", "utag-worker", "utag-adapters", "utag-tui", "utag-veriforge"]

[tool.uv.workspace]
members = ["packages/python/*"]

[tool.uv.sources]
utag-core = { workspace = true }
utag-generators = { workspace = true }
utag-cli = { workspace = true }
utag-worker = { workspace = true }
utag-adapters = { workspace = true }
utag-tui = { workspace = true }
utag-veriforge = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
